# botpress-connector

./: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  docker-compose.yml  rewrite.ps1
backend/: pyproject.toml
backend/app/: config.py  main.py  routes.py  schemas.py  storage.py
backend/app/connector/: client.py  errors.py  scanner.py
backend/tests/: mock_botpress.py  test_api.py  test_integration_mock_botpress.py  test_scanner.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
