[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "botpress-connector-backend"
version = "0.1.0"
description = "Botpress Chat API connector demo backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "uvicorn[standard]>=0.30.0",
  "SQLAlchemy>=2.0.0",
  "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
